SimpleComplex/Locale 1.x, 2017-08-11
------------------------------------
- Allow that text() placeholder key is % prefixed.
- Err if locale class doesn't exist; a.k.a. configuration error,
  probably wrongly delimited namespace in config ini localeToClass[some-locale].

SimpleComplex/Locale 1.x, 2017-07-20
------------------------------------
- Cli script find vendor dir fix.

SimpleComplex/Locale 1.x, 2017-07-18
------------------------------------
- Locale text() must always return string.
  Locale text() use string parameter identifier ('section:key:sub').

SimpleComplex/Locale 1.x, 2017-07-12
------------------------------------
- Release 0.9.

SimpleComplex/Locale 1.x, 2017-07-02
------------------------------------
- Don't parse type locale-text text .inis.
- Include locale-text settings into main locale settings .ini file.
- Better help in .ini files.
- Export from cache.

SimpleComplex/Locale 1.x, 2017-07-01
------------------------------------
- CLI interface for locale text.
- Export locale text from sources, as JSON to file.

SimpleComplex/Locale 1.x, 2017-06-30
------------------------------------
- Configuration, texts, locale/language mapper, abstract and a few concrete
  locale classes.

SimpleComplex/Locale 1.x, 2017-06-29
------------------------------------
- Initial.