@@ -1,3 +1,7 @@
+SimpleComplex/Locale 1.x, 2017-08-23
+------------------------------------
+- Sort text ini file paths, to allow predictable override of common texts.
+
 SimpleComplex/Locale 1.x, 2017-08-11
 ------------------------------------
 - Allow that text() placeholder key is % prefixed.
